--- a/Advent-of-Code2021.cabal
+++ b/Advent-of-Code2021.cabal
@@ -39,7 +39,6 @@ executable Advent-of-Code2021
 
 executable day-1
     main-is: day-1/Main.hs
-    build-depends:    base ^>=4.15.0.0,
-                      MissingH
+    build-depends:    base ^>=4.15.0.0
     hs-source-dirs:   src
     default-language: Haskell2010
