--- a/Advent-of-Code2021.cabal
+++ b/Advent-of-Code2021.cabal
@@ -42,3 +42,9 @@ executable day-1
     build-depends:    base ^>=4.15.0.0
     hs-source-dirs:   src
     default-language: Haskell2010
+
+executable day-2
+    main-is: day-2/Main.hs
+    build-depends:    base ^>=4.15.0.0
+    hs-source-dirs:   src
+    default-language: Haskell2010
