--- a/Advent-of-Code2021.cabal
+++ b/Advent-of-Code2021.cabal
@@ -48,3 +48,9 @@ executable day-2
     build-depends:    base ^>=4.15.0.0
     hs-source-dirs:   src
     default-language: Haskell2010
+
+executable day-3
+    main-is: day-3/Main.hs
+    build-depends:    base ^>=4.15.0.0
+    hs-source-dirs:   src
+    default-language: Haskell2010
