--- a/Advent-of-Code2021.cabal
+++ b/Advent-of-Code2021.cabal
@@ -54,3 +54,9 @@ executable day-3
     build-depends:    base ^>=4.15.0.0
     hs-source-dirs:   src
     default-language: Haskell2010
+
+executable day-4
+    main-is: day-4/Main.hs
+    build-depends:    base ^>=4.15.0.0
+    hs-source-dirs:   src
+    default-language: Haskell2010
