--- a/Advent-of-Code2021.cabal
+++ b/Advent-of-Code2021.cabal
@@ -60,3 +60,11 @@ executable day-4
     build-depends:    base ^>=4.15.0.0
     hs-source-dirs:   src
     default-language: Haskell2010
+
+executable day-5
+    main-is: day-5/Main.hs
+    build-depends:    base ^>=4.15.0.0,
+                      ilist,
+                      ghc
+    hs-source-dirs:   src
+    default-language: Haskell2010
